--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
 
     <string name="message_no_comment">暂无评论 -_- </string>
     <string name="message_no_network">无网络或连接超时 T^T </string>
-    <string name="message_flush_success">加载成功 ヽ( ^∀^)ﾉ</string>
-    <string name="message_new_news">刷新成功ヽ( ^∀^)ﾉ  新增%d条新闻 </string>
+    <string name="message_flush_success">加载成功 （*^_^*）</string>
+    <string name="message_new_news">新增%d条新闻 （*^_^*）</string>
+    <string name="message_no_new_news">暂时没有新的新闻  (..•˘_˘•..)</string>
     <string name="message_load_from_cache">无可用网络，加载之前的缓存 ( &gt;﹏&lt;。)～</string>
-    <string name="message_data_structure_change">网站改版 （╯‘□\′）╯（┴—┴\')  请联系开发者。</string>
+    <string name="message_data_structure_change">网站又改版啦。。请联系开发者。</string>
 
+    <string name="menu_reflush">刷新</string>
     <string name="menu_share">分享链接</string>
     <string name="menu_view_in_browser">在浏览器中查看</string>
 
