--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="pref_about_summary">cnBeta 第三方新闻客户端</string>
     <string name="pref_hardware_accelerated_title">WebView硬件加速</string>
     <string name="pref_hardware_accelerated_key">hardwareAccelerated</string>
-    <string name="pref_hardware_accelerated_summary">只针对Android 4.4 有效。\n原因:Android 4.4 系统WebView硬件加速不完善，在加载大量图片后会造成界面卡死和程序崩溃。可以通过此关闭硬件加速。副作用是会造成WebView滑动卡顿。</string>
+    <string name="pref_hardware_accelerated_summary">关闭可能会造成WebView滑动卡顿。</string>
     <string name="pref_show_list_news_image_key">showListImage</string>
     <string name="pref_show_list_news_image_title">显示列表图片</string>
     <string name="pref_show_list_news_image_summary">新闻是否列表显示图片</string>
@@ -47,7 +47,7 @@
     <string name="pref_debug_title">调试模式</string>
     <string name="pref_debug_summary">启用调试模式(重启生效)</string>
     <string name="pref_clean_cache_key">cleanCache</string>
-    <string name="pref_clean_cache_summary">清理缓存</string>
     <string name="pref_clean_cache_title">清理应用缓存</string>
+    <string name="pref_advience_categroy">高级</string>
 
 </resources>
