--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,11 @@
 
     <string name="share_templates">我觉得这篇新闻不错 %1$s (%2$s) 分享自cnBeta 中文业界资讯。</string>
 
-    <string name="message_no_comment">暂无评论，快抢沙发吧。</string>
     <string name="message_comment_close">评论已关闭</string>
+    <string name="message_no_comment">暂无评论，快抢沙发吧。</string>
+    <string name="message_new_news">新增%d条新闻  *\\(๑• ₃ •๑)*</string>
     <string name="message_flush_success">加载成功  *\\(๑• ₃ •๑)*</string>
+    <string name="message_no_new_news">暂时没有新的新闻  (๑•́ ₃ •̀๑)</string>
     <string name="message_no_network">无网络或连接超时   ε٩(๑> ₃ &lt;)۶ з  </string>
     <string name="message_load_from_cache">无可用网络，加载之前的缓存  ( &gt;﹏&lt;。)～</string>
     <string name="message_data_structure_change"> ლ(°Д°ლ) 网站又改版啦。。快联系联系开发者吧。 </string>
