--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="choise_browser">选择浏览器</string>
     <string name="load_fail">加载失败 ,点击重试。</string>
 
-    <string name="share_templates">我觉得这篇新闻不错 %1$s (%2$s) 分享自cnBeta 中文业界资讯。</string>
+    <string name="share_templates">我觉得这篇新闻不错 《%1$s》 (%2$s) 分享自cnBeta 中文业界资讯。</string>
 
     <string name="message_comment_close">评论已关闭</string>
     <string name="message_no_comment">暂无评论，快抢沙发吧。</string>
@@ -54,8 +54,10 @@
     <string name="pref_show_large_image_summary">开启后将会消耗大量流量,平均消耗大于 2M, 推荐在Wifi下使用。</string>
 
 
-    <string name="button_temporary_save">临时生效</string>
-    <string name="button_restore_default">恢复默认</string>
-    <string name="buttom_permanent_save">永久生效</string>
+    <string name="button_temporary_save">确定</string>
+    <string name="button_restore_default">默认</string>
+    <string name="buttom_permanent_save">保存</string>
+    <string name="menu_font">字体</string>
+    <string name="menu_book_mark">收藏</string>
 
 </resources>
