--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="settings">设置</string>
-    <string name="app_name">cnBeta 中文业界资讯</string>
+    <string name="app_name">cnBeta Plus</string>
     <string name="choise_browser">选择浏览器</string>
     <string name="load_fail">加载失败 ,点击重试。</string>
 
