update version and release

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+v1.0.7
+1.修复卡片背景边界问题。
+2.提供评论顺序切换功能。
+3.提供资讯主题订阅功能。
+4.提供多色主题切换功能。
+5.提供夜间模式功能。
+6.其他细节上的更正。
 v1.0.6
 1. 减小主界面字体大小。
 2. 重新设计新闻详情界面。
