1. add android 5.0 ripple effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,8 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="pref_show_emoji_key">emoji</string>
+    <string name="pref_show_emoji_title">评论显示表情</string>
+    <string name="pref_show_emoji_summary">评论是否显示表情</string>
 
 </resources>
