--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,8 @@ v1.0.8
 2.新增新闻图片分享功能
 3.新增图片详情滑动切换功能。
 4.新增评论复制功能。长按评论可以复制该评论。
+5.支持评论中显示表情,可在设置中关闭。
+6.增加Android 5.0 点击波纹效果。
 v1.0.7
 1.修复卡片背景边界问题。
 2.提供评论顺序切换功能。
