--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,7 +4,8 @@ v1.0.8
 3.新增图片详情滑动切换功能。
 4.新增评论复制功能。长按评论可以复制该评论。
 5.支持评论中显示表情,可在设置中关闭。
-6.增加Android 5.0 点击波纹效果。
+6.列表增加Android 5.0 点击波纹效果。
+7.尝试兼容新闻中引用的优酷、土豆、新浪、腾讯Flash视频转化为Html5格式进行播放。目前Flash转Html5需要点击后才能进行加载。原生Html5视频不受影响。
 v1.0.7
 1.修复卡片背景边界问题。
 2.提供评论顺序切换功能。
