--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="end">-- The End --</string>
     <string name="theme">主题配色</string>
 
-    <string name="share_templates">我觉得这篇新闻不错 《%1$s》 (%2$s) 分享自 cnBeta Plus。</string>
+    <string name="share_templates">我觉得这篇新闻不错 《%1$s》 %2$s 分享自 cnBeta Plus。</string>
 
     <string name="message_comment_close">评论已关闭</string>
     <string name="message_no_comment">暂无评论，快抢沙发吧。</string>
@@ -88,5 +88,8 @@
     <string name="pref_new_detail_key">new detail design</string>
     <string name="pref_new_detail_summary">新版新闻详情界面支持左滑切换到评论页面。</string>
     <string name="pref_new_detail_title">使用新版新闻详情界面</string>
+    <string name="pref_preload_image_key">image-preload</string>
+    <string name="pref_preload_image_title">预加载图片</string>
+    <string name="pref_preload_image_summary">查看大图时是否预加载两侧图片</string>
 
 </resources>
