--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,11 @@
 v1.0.9
 1.添加大图模式Gif支持。
-2.修复无法显示超长图片的问题。
-3.新增在夜间模式下降低列表图片亮度功能。
-4.新增资讯详情滑动功能。在资讯详情页面向左滑动可以直接查看评论。默认开启此功能，可在设置中关闭。
-5.其他问题修复。
+2.修改浮动按钮动画效果。
+3.修复无法显示超长图片的问题。
+4.夜间模式下降低列表图片亮度。
+5.修复Android 4.3以下崩溃问题。
+6.新增资讯详情左划进入评论的功能。
+7.其他问题修复。
 v1.0.8
 1.新增热门评论浏览功能
 2.新增新闻图片分享功能
