修正一个拼写错误

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 v1.1.1
 1.修复点击文章中相关文章中的链接造成程序卡死重启应用的问题。
 2.视频全屏播放时隐藏状态栏。仅适用于android 4.4以上系统。
+3.添加更新检查功能
 v1.1.0
 1.修复新闻新闻列表标题显示问题。
 2.设置中可关闭列表波纹效果。
