--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,8 @@
 v1.2.0
 1.删除列表波纹效果。
+2.尝试屏蔽优酷视频广告
+3.正文添加智能图片加载模式，数据流量模式点击加载图片，wifi情况下加载图片
+4.允许自定义屏蔽正文内容,默认屏蔽新闻尾部的老虎证券和活动入口
 v1.1.1.1
 1.缩短版本号长度。
 2.修复资讯详情加载相对较慢的问题。
