--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,8 @@
     <string name="menu_show_block_ad">显示屏蔽元素</string>
     <string name="menu_hide_block_ad">隐藏屏蔽元素</string>
 
+    <string name="pref_svg_loading_key">svg_loading_image</string>
+    <string name="pref_svg_loading_summary">新闻详情页面加载图片使用 SVG 动画效果，推荐性能较强的设备开启</string>
+    <string name="pref_svg_loading_title">SVG 加载动画</string>
+
 </resources>
