1.fix comment issue 2.remove lage image mode

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,9 +1,14 @@
+v1.2.1
+1.移除首页的大图模式
+2.修复无法评论问题
+3.新增点击标题栏返回顶部功能
 v1.2.0
 1.删除列表波纹效果。
 2.尝试屏蔽优酷视频广告
 3.正文添加智能图片加载模式，数据流量模式点击加载图片，wifi情况下加载图片
 4.允许自定义屏蔽正文内容,默认屏蔽新闻尾部的老虎证券和活动入口
 5.资讯详情页面使用SVG动画加载图片（默认关闭，可以在设置中开启）
+6.兼容新版网页
 v1.1.1.1
 1.缩短版本号长度。
 2.修复资讯详情加载相对较慢的问题。
