--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,8 @@ v1.2.1
 2.修复无法评论问题
 3.新增点击标题栏返回顶部功能
 4.修复在夜间模式下输入评论无法看见问题
-5.相关新闻可以在应用内开启
+5.修复相关新闻可以在应用内开启
+6.新增长按浮动按钮返回顶部功能
 v1.2.0
 1.删除列表波纹效果。
 2.尝试屏蔽优酷视频广告
