--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,8 @@
-v1.2.1
-1.移除首页的大图模式
-2.修复无法评论问题
+v1.3.0
+1.修复无法加载图片问题
+2.移除不受支持的功能
 3.新增点击标题栏返回顶部功能
-4.修复在夜间模式下输入评论无法看见问题
-5.修复相关新闻可以在应用内开启
-6.新增长按浮动按钮返回顶部功能
+4.修复相关新闻可以在应用内开启
 v1.2.0
 1.删除列表波纹效果。
 2.尝试屏蔽优酷视频广告
