--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="share_templates">我觉得这篇新闻不错 《%1$s》 %2$s 分享自 cnBeta Plus。</string>
 
     <string name="message_comment_close">评论已关闭</string>
-    <string name="message_no_comment">暂无评论，快抢沙发吧。</string>
+    <string name="message_no_comment">暂无评论</string>
     <string name="message_new_news">新增%d条新闻  *\\(๑• ₃ •๑)*</string>
     <string name="message_flush_success">加载成功  *\\(๑• ₃ •๑)*</string>
     <string name="message_no_new_news">暂时没有新的新闻 (๑•́ ₃ •̀๑) </string>
