fix error when loading comment

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,8 +1,11 @@
+v1.3.1
+1.修复 修复加载评论失败问题
+
 v1.3.0
-1.修复无法加载图片问题
-2.移除不受支持的功能
-3.新增点击标题栏返回顶部功能
-4.修复相关新闻可以在应用内开启
+1.修复 无法加载图片问题
+2.移除 不受支持的功能
+3.新增 点击标题栏返回顶部功能
+4.修复 相关新闻可以在应用内开启
 v1.2.0
 1.删除列表波纹效果。
 2.尝试屏蔽优酷视频广告
